force-app/main/default/objects/Confirmation_Publish__e/Confirmation_Publish__e.object-meta.xml
<CustomObject>
    <description>Represents a Confirmation for a student in a section.</description>
    <label>Registration Publish</label>
    <pluralLabel>Registration Publishes</pluralLabel>
</CustomObject>