force-app/main/default/objects/Confirmation_Publish__e/fields/Is_Drop__c.field-meta.xml
<CustomField>
    <fullName>Is_Drop__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Drop</label>
    <type>Checkbox</type>
</CustomField>