force-app/main/default/objects/Confirmation_Publish__e/fields/Section_Reference__c.field-meta.xml
<CustomField>
    <fullName>Section_Reference__c</fullName>
    <description>The section for the enrollment.</description>
    <label>Section Reference</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>