force-app/main/default/objects/Confirmation_Publish__e/fields/Status_Detail__c.field-meta.xml
<CustomField>
    <fullName>Status_Detail__c</fullName>
    <label>Status Detail</label>
    <length>40</length>
    <type>Text</type>
</CustomField>