force-app/main/default/objects/Confirmation_Publish__e/fields/User_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Id__c</fullName>
    <description>The User Id in the enrollment (currently Opus noncredit id).</description>
    <label>User Id</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>